# AI-Native-Hedge-Fund-ch

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  PLAN.md  README.md  pyproject.toml
agents/: __init__.py  registry.py
agents/counterargument_agent/: __init__.py  descriptor.py
agents/evidence_grader_agent/: __init__.py  descriptor.py
agents/filing_ingestion_agent/: __init__.py  descriptor.py
agents/hypothesis_agent/: __init__.py  descriptor.py
agents/memo_writer_agent/: __init__.py  descriptor.py
agents/news_agent/: __init__.py  descriptor.py
agents/portfolio_agent/: __init__.py  descriptor.py
agents/risk_reviewer_agent/: __init__.py  descriptor.py
agents/signal_builder_agent/: __init__.py  descriptor.py
agents/transcript_agent/: __init__.py  descriptor.py
apps/api/: builders.py  contracts.py  errors.py  main.py  state.py
apps/cli/: __init__.py  __main__.py  main.py
apps/research_console/: README.md
artifacts/: README.md
configs/: README.md  local.example.toml
data_contracts/: README.md
docs/agents/: agent_spec.md  evidence_extraction_notes.md
docs/architecture/: backtesting_and_simulation.md  daily_orchestration.md  day1_architecture.md  document_intelligence.md  entity_resolution_and_linking.md  evals_framework.md  ingestion_and_normalization.md  monitoring_and_health.md  refusal_and_quarantine_behavior.md
docs/contracts/: data_contracts.md  (+3 more)
infra/: README.md
libraries/: __init__.py
notebooks/: README.md
pipelines/: __init__.py
research_artifacts/: README.md
storage/: README.md
(+383 files in other folders)
