[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "anhf-research-os"
version = "0.1.0"
description = "Week 1 foundation for an AI-native hedge fund research and paper-trading platform."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "ANHF Founding Engineering" },
]
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic>=2.9,<3.0",
  "pydantic-settings>=2.5,<3.0",
  "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "mypy>=1.11,<2.0",
  "pre-commit>=3.8,<4.0",
  "pytest>=8.3,<9.0",
  "ruff>=0.6.9,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["apps", "services", "agents", "libraries"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
pretty = true
mypy_path = "."

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
